# game

./: .gitignore  AGENTS.md  Cargo.toml
.helix/: ignore
code/: Cargo.toml  Justfile
code/assets/shaders/: flame_orb.wgsl
code/client/: Cargo.toml
code/client/assets/shaders/: flame_orb.wgsl  shield.wgsl
code/client/src/: main.rs
code/server/: Cargo.toml
code/server/src/: main.rs
code/shared/: Cargo.toml
code/shared/src/: lib.rs
code/src/: main.rs
design/: vision.md
src/: camera.rs  controls.rs  main.rs
