[package]
name = "industrial-mage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Game enging
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
# Physics/collision detection
avian3d = "0.2.1"
# Tracing utilities
tracing = "0.1.41"

# Optimize debug builds a little
[profile.dev]
opt-level = 1

# Optimize dependencies a lot, even in debug mode
[profile.dev.package."*"]
opt-level = 3
