[package]
name = "shared"
edition.workspace = true
version.workspace = true

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["std", "bevy_state", "serialize"] }
avian3d = { workspace = true, features = ["serialize"] }
bevy-tnua.workspace = true
bevy-tnua-avian3d.workspace = true
bevy_replicon.workspace = true
serde.workspace = true
